[gd_scene load_steps=4 format=2]

[ext_resource path="res://gs_ecs_test/tests/test_system_add_remove.gd" type="Script" id=1]
[ext_resource path="res://gs_ecs_test/entities/test_entity.tscn" type="PackedScene" id=2]
[ext_resource path="res://gs_ecs_test/systems/test_rotating_system.tscn" type="PackedScene" id=3]

[node name="TestSystemAddRemove" type="Node"]
script = ExtResource( 1 )

[node name="ControlledEntity" type="Node" parent="."]

[node name="Controlled1" parent="ControlledEntity" instance=ExtResource( 2 )]
position = Vector2( 300, 270 )

[node name="Components" type="Node" parent="ControlledEntity/Controlled1"]

[node name="UncontrolledEntity" type="Node" parent="."]

[node name="UnControlled1" parent="UncontrolledEntity" instance=ExtResource( 2 )]
position = Vector2( 660, 270 )

[node name="Components" type="Node" parent="UncontrolledEntity/UnControlled1"]

[node name="Systems" type="Node" parent="."]

[node name="RotatingSystem" parent="Systems" instance=ExtResource( 3 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Container" type="Container" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Container"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -131.0
margin_bottom = 40.0

[node name="Add" type="Button" parent="CanvasLayer/Container/VBoxContainer"]
margin_right = 131.0
margin_bottom = 20.0
text = "Add System"

[node name="Remove" type="Button" parent="CanvasLayer/Container/VBoxContainer"]
margin_top = 24.0
margin_right = 131.0
margin_bottom = 44.0
text = "Remove System"

[connection signal="pressed" from="CanvasLayer/Container/VBoxContainer/Add" to="." method="_on_Add_pressed"]
[connection signal="pressed" from="CanvasLayer/Container/VBoxContainer/Remove" to="." method="_on_Remove_pressed"]
